--- a/lectures/templates/lectures/index.html
+++ b/lectures/templates/lectures/index.html
@@ -13,6 +13,7 @@
 
 {% block content %}
 <h1>어쩌고 저쩌고 영어 어쩌고</h1>
+<h1>HELLO INDEX</h1>
 <input type="text">
 <input type="submit" value="시작">
 
@@ -53,10 +54,10 @@
         </div>
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
+      <img src="" class="d-block w-100" alt="...">
     </div>
   </div>
     <button class="carousel-control-prev prev-btn" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
