--- a/lectures/templates/lectures/speaking.html
+++ b/lectures/templates/lectures/speaking.html
@@ -1,13 +1,27 @@
 {% extends 'base.html' %}
+{% block style %}
+<style>
+  .btn-play {
+    width:180px;
+  }
+</style>
+{% endblock style %}
 {% block content %}
-  <h1>SPEAKING</h1>
   
   <div class="d-flex flex-column">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTiMKb4-UNYgBBqhsiM5YjFb8h_cTIveDAL1bSkeBe_oynpBUCr3w6yGy2ctXUogOariU0&usqp=CAU" alt="">
-    <audio controls id="audio-ctrl">녹음</audio>
-    <div class="d-flex justify-content-center">
-      <button class="btn btn-primary">정지</button>
-      <button id="record-btn">녹음 버튼</button>
+    <div class="d-flex justify-content-end my-3">
+      <button class="btn theme-btn">녹음하기</button>
+      <button class="btn theme-btn">녹화하기</button>
+    </div>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTiMKb4-UNYgBBqhsiM5YjFb8h_cTIveDAL1bSkeBe_oynpBUCr3w6yGy2ctXUogOariU0&usqp=CAU" alt="" style="height:500px;">
+    <audio controls id="audio-ctrl">Audio Controller</audio>
+
+    <div class="d-flex justify-content-center my-5">
+      <p class="h1">11:11</p>
+    </div>
+    <div class="d-flex justify-content-center my-3">
+      <button class="btn theme-btn btn-play">정지</button>
+      <button id="record-btn" class="btn theme-btn btn-play">녹음 시작</button>
     </div>
   </div>
 {% endblock content %}
@@ -24,27 +38,29 @@
   recordBtn.addEventListener("click", async function (event) {
     if(!isRecording){
       const mediaStream = await navigator.mediaDevices.getUserMedia({audio: true})
-
+      
       mediaRecorder = new MediaRecorder(mediaStream)
       mediaRecorder.ondataavailable = event => {
         audioArray.push(event.data);
       }
-
+      
       mediaRecorder.onstop = event => {
         const blob = new Blob(audioArray, {"type": "audio/ogg codecs=opus"})
         audioArray.splice(0)
-
+        
         const blobURL = window.URL.createObjectURL(blob)
-
+        
         audioCtrl.src = blobURL;
         audioCtrl.play();
         console.log(audioCtrl)        
       }
       mediaRecorder.start();
       isRecording = true;
+      recordBtn.innerText = "녹음 중지"
     } else {
       mediaRecorder.stop();
       isRecording = false;
+      recordBtn.innerText = "녹음 시작"
     }
   })
 </script>
